add typogprahy styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+   <p>
+    1
+g very ripe tomatoes or 2 x 400g cans peeled plum tomatoes drained
+   </p>
+   <h1>
+    RECIPE INGREDIENTS
+   </h1>
+   <h2>
+    HOW TO COOK IT
+
+   </h2>
+
+   <h4>
+    
+SERVINGS
+   </h4>
 </body>
 </html>
