create the main html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
      </div>
     </nav>
     <main>
-
+    <div class="recipeContainer"></div>
+    <div class="recipeIngredientContainer">
+      <div class="searchMsgBox">
+         <img src="/assets/face-smile-regular.svg" alt="">
+        <p id="startSearchMessage">
+          Start by searching for a recipe or an ingredient. Have fun!
+        </p>
+      </div>
+    </div>
     </main>
 </div>
 
