get the recipes and append them inside a container

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     </nav>
     <main>
     <div class="recipeResultContainer">
-      <p class="errorMsg hidden"></p>
-      <div class="loader hidden"></div>
+      <div>
+        <p class="errorMsg hidden"></p>
+        <div class="loader hidden"></div>
+      </div>
     </div>
     <div class="recipeIngredientContainer">
       <div class="searchMsgBox">
