fixed some bugs and make the calls for the ingredient api

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <div>
         <p class="errorMsg hidden"></p>
         <div class="loader hidden"></div>
+        <div class="recipeResult">
+          
+        </div>
       </div>
     </div>
     <div class="recipeIngredientContainer">
