send the second Api call for getting ingredient

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div class="recipeResultContainer">
       <div>
         <p class="errorMsg hidden"></p>
-        <div class="loader hidden"></div>
+        <div class="loader loader1 hidden"></div>
         <div class="recipeResult">
-          
+
         </div>
       </div>
     </div>
@@ -50,6 +50,7 @@
           Start by searching for a recipe or an ingredient. Have fun!
         </p>
       </div>
+      <div class="loader loader2 hidden"></div>
     </div>
     </main>
 </div>
