--- a/index.html
+++ b/index.html
@@ -39,18 +39,40 @@
         <p class="errorMsg hidden"></p>
         <div class="loader loader1 hidden"></div>
         <div class="recipeResult">
-
+        
         </div>
       </div>
-    </div>
+      </div>
+     
     <div class="recipeIngredientContainer">
-      <div class="searchMsgBox">
+      <div class="searchMsgBox hidden">
          <img src="/assets/face-smile-regular.svg" alt="">
         <p id="startSearchMessage">
           Start by searching for a recipe or an ingredient. Have fun!
         </p>
       </div>
       <div class="loader loader2 hidden"></div>
+       <!-- ingredient info -->
+       <div class="ingredientInfo">
+        <img class="recipe-bg" src="http://forkify-api.herokuapp.com/images/pestoa0e7.jpg" alt="" class="ingredient__img">
+        <div class="recipeIngredient__capacity">
+          <!-- box 1 -->
+          <div class="recipeIngredient__time-box">
+              <span class="time-logo">
+              <img src="/assets/clock-solid.svg" alt="">
+            </span>
+            <p class="ingredient-time">75MINUTEE</p>
+        </div>
+        <div class="recipeIngredient__servings">
+          <span class="people-icon">
+            <img src="/assets/user-solid.svg" alt="">
+          </span>
+          <p class="serving-number">
+            1Serving
+          </p>
+        </div>
+      </div>
+    </div>
     </div>
     </main>
 </div>
