grap the some needed svg's

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="/assets/user-solid.svg" alt="">
           </span>
           <p class="serving-number">
-            1Serving
+            1Serving <span class="plus-icon">+</span><span class="minus-icon">-</span>
           </p>
         </div>
       </div>
