add the serving ingredient container styles

--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
           <span class="people-icon">
             <img src="/assets/user-solid.svg" alt="">
           </span>
-          <p class="serving-number">
-            1Serving <span class="plus-icon">+</span><span class="minus-icon">-</span>
-          </p>
+          <div class="serving-box">
+            <p class="serving-number">
+              1Serving
+            </p>
+            <img src="/assets/plus-svgrepo-com.svg" alt="" class="plus-icon">
+            <img src="/assets/minus-solid.svg" alt="" class="minus-icon">
+          </div>
         </div>
+        <img src="/assets/bookmark-svgrepo-com.svg" alt="" class="save-recipe">
       </div>
     </div>
     </div>
