add more damn html to the ingredient container

--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
         </div>
         <img src="/assets/bookmark-svgrepo-com.svg" alt="" class="save-recipe">
       </div>
+      <div class="ingredientInfo__list-container">
+        <h2 class="list-title">RECIPE INGREDIENTS </h2>
+        <ul class="ingredient-list">
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+          <li class="list-ingredient-item"> 6 tbsps extra-virgin olive oil</li>
+        
+        </ul>
+      </div>
     </div>
     </div>
     </main>
