add the btn controller componenet

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         
         </div>
       </div>
+      <div class="btn-controler-box hidden">
+        <button data-value=0 class=" btn-controler "> page 0</button>
+        <button data-value=2 class=" btn-controler"> page 2</button>
+      </div>
       </div>
      
     <div class="recipeIngredientContainer">
