the whole code got messed up

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
       </div>
       <div class="btn-controler-box hidden">
-        <button data-value=0 class=" btn-controler "> page 0</button>
-        <button data-value=2 class=" btn-controler"> page 2</button>
+        <button   data-type='decrease' class=" btn-controler invisibleBtn"> page 0</button>
+        <button data-type='increase' class=" btn-controler"> page 2</button>
       </div>
       </div>
      
